# fastapibook_proj

./: .gitignore  auth.py  main.py  pyproject.toml
data/: creature.py  explorer.py  init.py  user.py
db/: cryptid.db  cryptid.db-journal
fake/: creature.py  explorer.py  user.py
model/: explorer.py
service/: creature.py  explorer.py  user.py
test/unit/data/: test_creature.py  test_explorer.py
test/unit/service/: test_creature_service.py
web/: creature.py  explorer.py  user.py
