[tool.poetry]
package-mode = false

[project]
name = "src"
version = "0.1.0"
description = "alchemy test project"
authors = [
    {name = "Kostya-59benz",email = "razerresolution@gmail.com"}
]

readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "psycopg (>=3.2.4,<4.0.0)",
    "pydantic (>=2.10.5,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "black (>=24.10.0,<25.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "requests (>=2.32.3,<3.0.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "db-sqlite3 (>=0.0.1,<0.0.2)",
    "httpie (>=3.2.4,<4.0.0)",
    "python-jose[cryptography] (>=3.3.0,<4.0.0)",
    "passlib (>=1.7.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
